--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-clr: #000000;
+  --primary-clr: #1e1e1e  ;
 }
 * {
   margin: 0;
@@ -28,17 +28,19 @@
 }
 
 body {
+  padding-top: 25px;
   position: relative;
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 30px;
-  background-color: #000;
+  background-color: #1E1E1E ;
 }
 
 
 .container {
+  padding-top: 10px;
   position: relative;
   width: 1200px;
   min-height: 850px;
@@ -264,6 +266,7 @@ body {
 }
 
 
+
 .calendar .goto-today .goto {
   display: flex;
   align-items: center;
@@ -275,7 +278,7 @@ body {
 
 .calendar .goto-today .goto input {
   width: 100%;
-  height: 30px;
+  height: 25px;
   outline: none;
   border: none;
   border-radius: 5px;
@@ -471,6 +474,8 @@ body {
 
 
 .add-event:hover {
+  border: 2px solid #4EC9B0;
+  color:  #4EC9B0;
   opacity: 1;
 }
 
